# madbfs

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  IPC.md  README.md  build.sh  conanfile.py  package.sh
.github/ci/: conan-profile.ini
.github/workflows/: ci.yml  profile-client.ini  profile-server.ini
cmake/: fetched-libs.cmake
include/adbfsm/: adbfsm.hpp  args.hpp  cmd.hpp  common.hpp  log.hpp  util.hpp
include/adbfsm/async/: as_expected.hpp  async.hpp
include/adbfsm/data/: cache.hpp  connection.hpp  ipc.hpp  stat.hpp
include/adbfsm/path/: path.hpp  path_iter.hpp
include/adbfsm/tree/: file_tree.hpp  node.hpp  util.hpp
include/adbfsm/util/: overload.hpp  split.hpp  threadpool.hpp
include/madbfs/: args.hpp  common.hpp  madbfs.hpp
include/madbfs/async/: async.hpp
include/madbfs/data/: cache.hpp  connection.hpp  ipc.hpp
include/madbfs/tree/: file_tree.hpp  node.hpp
include/madbfs/util/: split.hpp
madbfs/: CMakeLists.txt
madbfs-common/: CMakeLists.txt
madbfs-common/cmake/: fetched-libs.cmake  generate-version.cmake  version.cmake  version.hpp.in
madbfs-common/include/madbfs-common/: aliases.hpp  ipc.hpp  log.hpp  rpc.hpp
madbfs-common/include/madbfs-common/async/: as_expected.hpp  async.hpp
madbfs-common/include/madbfs-common/util/: copy_const.hpp  defer.hpp  slice.hpp  split.hpp  var_wrapper.hpp
madbfs-common/src/: ipc.cpp  rpc.cpp
madbfs-msg/: CMakeLists.txt  conanfile.py
madbfs-msg/src/: main.cpp
madbfs-server/: CMakeLists.txt  build_all.sh  conan-android-profile.conf  conanfile.py
madbfs-server/include/madbfs-server/: defer.hpp  request_handler.hpp  server.hpp
madbfs-server/src/: main.cpp  request_handler.cpp  server.cpp
madbfs/cmake/: fetched-libs.cmake
madbfs/include/madbfs/: adb.hpp  args.hpp  cache.hpp  cmd.hpp  connection.hpp  file_handle_store.hpp  filesystem.hpp  madbfs.hpp  node.hpp  operations.hpp  path.hpp  stat.hpp
madbfs/include/madbfs/cache/: dirty_map.hpp  lru_cache.hpp  page.hpp
madbfs/include/madbfs/connection/: adb_connection.hpp  connection.hpp  server_connection.hpp
madbfs/include/madbfs/data/: adb_connection.hpp  cache.hpp  connection.hpp  ipc.hpp  stat.hpp
madbfs/include/madbfs/path/: path.hpp
madbfs/include/madbfs/transport/: adb_transport.hpp  null_transport.hpp  proxy_transport.hpp  transport.hpp
madbfs/include/madbfs/tree/: file_tree.hpp  node.hpp
madbfs/src/: adb.cpp  args.cpp  cache.cpp  cmd.cpp  connection.cpp  file_handle_store.cpp  filesystem.cpp  madbfs.cpp  main.cpp  node.cpp  operations.cpp  path.cpp
madbfs/src/cache/: dirty_map.cpp  lru_cache.cpp  page.cpp
madbfs/src/connection/: adb_connection.cpp  connection.cpp  server_connection.cpp
madbfs/src/data/: adb_connection.cpp  cache.cpp  connection.cpp  ipc.cpp
madbfs/src/embed/: server.cpp  server.hpp
madbfs/src/path/: path.cpp
madbfs/src/transport/: adb_transport.cpp  proxy_transport.cpp
madbfs/src/tree/: file_tree.cpp  node.cpp
madbfs/test/: CMakeLists.txt  ipc.py  test_filesystem.py  test_path.cpp  test_tree.cpp  tree.cpp
madbfs/test/cmake/: fetched-libs.cmake
source/: adbfs.cpp  adbfs.hpp  adbfsm.cpp  adbfsm.hpp  args.hpp  cmd.hpp  common.hpp  log.hpp  madbfs.cpp  main.cpp  util.hpp
source/data/: cache.cpp  connection.cpp  ipc.cpp
source/path/: path.cpp
source/tree/: file_tree.cpp  node.cpp
test/: CMakeLists.txt  ipc.py  path.cpp  path_iter.cpp  pytest.ini  test_filesystem.py  test_ipc.cpp  test_path.cpp  test_rpc.cpp  test_tree.cpp  tree.cpp  util.hpp
test/cmake/: fetched-libs.cmake
